fifo to linkedlist